{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 298,
  "lineage": "fb5cee55-e950-7964-d4a1-22c16a751f99",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nyc_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09770832c4b6890c5",
            "owner_id": "367421604747",
            "tags": {
              "Name": "nyc_ig"
            },
            "vpc_id": "vpc-0bdd041f6c3bd5f01"
          },
          "depends_on": [
            "aws_vpc.nyc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_sn_rt_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00a5f5e7692b482ad",
            "owner_id": "367421604747",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09770832c4b6890c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_sn_rt_1"
            },
            "vpc_id": "vpc-0bdd041f6c3bd5f01"
          },
          "depends_on": [
            "aws_internet_gateway.nyc_ig",
            "aws_vpc.nyc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_sn_rt_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08d13ea9e0e84de2b",
            "owner_id": "367421604747",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09770832c4b6890c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_sn_rt_2"
            },
            "vpc_id": "vpc-0bdd041f6c3bd5f01"
          },
          "depends_on": [
            "aws_internet_gateway.nyc_ig",
            "aws_vpc.nyc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sn_rt_1_assn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e0e0d2c36a87b8",
            "route_table_id": "rtb-00a5f5e7692b482ad",
            "subnet_id": "subnet-091cd124d3bff0771"
          },
          "depends_on": [
            "aws_route_table.public_sn_rt_1",
            "aws_subnet.public_sn_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_sn_rt_2_assn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6a3cc2bf9aa42c7",
            "route_table_id": "rtb-08d13ea9e0e84de2b",
            "subnet_id": "subnet-01dbbb39608d3b8a5"
          },
          "depends_on": [
            "aws_route_table.public_sn_rt_2",
            "aws_subnet.public_sn_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367421604747:security-group/sg-04c580cb78c5a314a",
            "description": "Public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c580cb78c5a314a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public_sg",
            "name_prefix": null,
            "owner_id": "367421604747",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bdd041f6c3bd5f01"
          },
          "depends_on": [
            "aws_vpc.nyc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367421604747:subnet/subnet-091cd124d3bff0771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-091cd124d3bff0771",
            "map_public_ip_on_launch": false,
            "owner_id": "367421604747",
            "tags": {
              "Name": "public_sn_1"
            },
            "vpc_id": "vpc-0bdd041f6c3bd5f01"
          },
          "depends_on": [
            "aws_vpc.nyc_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367421604747:subnet/subnet-01dbbb39608d3b8a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01dbbb39608d3b8a5",
            "map_public_ip_on_launch": false,
            "owner_id": "367421604747",
            "tags": {
              "Name": "public_sn_2"
            },
            "vpc_id": "vpc-0bdd041f6c3bd5f01"
          },
          "depends_on": [
            "aws_vpc.nyc_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nyc_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367421604747:vpc/vpc-0bdd041f6c3bd5f01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0042669767785d2c9",
            "default_route_table_id": "rtb-03d633de84b100b51",
            "default_security_group_id": "sg-015bb4813d275fa33",
            "dhcp_options_id": "dopt-1df6b97a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bdd041f6c3bd5f01",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d633de84b100b51",
            "owner_id": "367421604747",
            "tags": {
              "Name": "aetion-vpc"
            }
          }
        }
      ]
    }
  ]
}